@@ -1,6 +1,7 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/wcc_rhelp.r
 \name{rhelp}
+\alias{?}
 \alias{help}
 \alias{rhelp}
 \title{rhelp}
@@ -8,6 +9,8 @@
 help(topic, package = NULL, lib.loc = NULL,
   verbose = getOption("verbose"),
   try.all.packages = getOption("help.try.all.packages"))
+
+"?"(e1, e2)
 }
 \arguments{
 \item{topic}{A topic as in \code{utils::help()}}
@@ -45,6 +48,13 @@ remoter> rhelp("dev.off", package = "remoter")
 remoter> rhelp("dev.off", package = "grDevices")
 
 remoter> help("par")
+
+remoter> ?`+`
+remoter> ?`?`
+remoter> ?"??"
+remoter> package?base
+remoter> `?`(package, remoter)
+
 
 remoter> q()
 >
